--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 
-<div style="height: 100%">
+<div style="height: 100vh">
     <iframe id="my-frame" name="iFrame1" width="100%" height="100%" frameborder="0" src="#"></iframe>
 </div>
 </body>
